[gd_scene load_steps=5 format=3 uid="uid://blqjsj4wbhr8u"]

[ext_resource type="Script" uid="uid://daw2o861jj0vl" path="res://src/scenes/UI/GameUI/GameUI.gd" id="2_elwfl"]
[ext_resource type="PackedScene" uid="uid://rvm2k5e6fiu5" path="res://src/scenes/UI/GameUI/PatienceCounter/ZoneCounterUI.tscn" id="2_fwjtt"]
[ext_resource type="PackedScene" uid="uid://6dt2pr7ig14l" path="res://src/scenes/UI/GameUI/Score/GlobalScoreUI.tscn" id="4_b00as"]
[ext_resource type="PackedScene" uid="uid://browjfmejnq75" path="res://src/scenes/UI/GameUI/Minimap/MinimapUI.tscn" id="5_b00as"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("2_elwfl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="TopUI" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="LeftZoneCounter" parent="MarginContainer/VBoxContainer/TopUI/HBoxContainer" instance=ExtResource("2_fwjtt")]
layout_mode = 2

[node name="GlobalScore" parent="MarginContainer/VBoxContainer/TopUI/HBoxContainer" instance=ExtResource("4_b00as")]
layout_mode = 2

[node name="RightZoneCounter" parent="MarginContainer/VBoxContainer/TopUI/HBoxContainer" instance=ExtResource("2_fwjtt")]
layout_mode = 2
zone = 1

[node name="UpperMiddleUI" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/UpperMiddleUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/UpperMiddleUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResetButton" type="Button" parent="MarginContainer/VBoxContainer/UpperMiddleUI/HBoxContainer/Control"]
layout_mode = 1
offset_right = 70.0
offset_bottom = 37.0
text = "Reset!"

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/UpperMiddleUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer/UpperMiddleUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MinimapUI" parent="MarginContainer/VBoxContainer/UpperMiddleUI/HBoxContainer/Control3" instance=ExtResource("5_b00as")]
unique_name_in_owner = true
layout_mode = 0

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
mouse_filter = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/UpperMiddleUI/HBoxContainer/Control/ResetButton" to="." method="_on_reset_button_pressed"]
